# embedded-tls

./: .gitignore  Cargo.toml  rust-toolchain.toml
afl/: Cargo.toml  README.md  run.sh
afl/src/: gencorpus.rs  main.rs  not_rng.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: handshake.rs
src/: asynch.rs  blocking.rs  config.rs  connection.rs  key_schedule.rs  lib.rs  record.rs
src/extensions/: mod.rs
src/handshake/: client_hello.rs  finished.rs  mod.rs
